Use the SharedLink struct instead of MumbleLink. Makes it so the launch order for the wrapper and Mumble doesn't matter, previously Mumble had to be started first.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,10 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "problemMatcher": [
+                "$rustc"
+            ]
         },
         {
             "label": "cargo build release",
@@ -19,16 +22,10 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
-        },
-        {
-            "label": "cargo test",
-            "type": "shell",
-            "command": "cargo test",
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            }
+            },
+            "problemMatcher": [
+                "$rustc"
+            ]
         }
     ]
 }
